<resources>
    <string name="app_name">HKFYG 跨越的力量</string>
    <string name="express_test_title">跨越的力量挑戰</string>
    <string name="express_test_objective">參加者需要在限時內利用材料製作一個結構，使其跨越30厘米的距離，並承受盡可能的重量。    </string>
    <string name="express_test_pres">•\t利用公文袋內的工具及材料製作一個結構，使其跨越30厘米的距離，並承受盡可能多的螺絲帽\r\n•\t結構完成後，可以把咖啡罐放置在結構上，然後放入螺絲帽\r\n•\t可自行揀選不同大小的螺絲帽 放入咖啡罐，每放置一個螺絲帽必須由裁判宣讀計時5秒後，才可放另一個螺絲帽\r\n•\t如結構毀掉，比賽即時結束\r\n•\t比賽期間不可改變枱的位置\r\n•\t其後參加者們需要根據個人身體狀況制定策略，完成三種強度的體能測試</string>
<string name="user_login">User Login</string>
<string name="campaign_id">campaign ID</string>
<string name="username">Username</string>
<string name="password">Password</string>
<string name="password2">Password Confirm</string>
<string name="login">Login success</string>
<string name="user_registration">User Registration</string>
<string name="name">English full name</string>
<string name="school">School</string>
<string name="select">Select</string>
<string name="register">Register</string>
<string name="login_success">Login success</string>
<string name="select_team">Select Team</string>
<string name="team">Team</string>
<string name="select_team_message">* Cannot change team after started</string>
<string name="join_team_success">Team joined successfully</string>
<string name="challenge">Challenge</string>
<string name="scan_qr_code">Scan QR Code</string>
<string name="my_result">My Result</string>
<string name="logout">Logout</string>
<string name="confirm_eventComplete_message">Event completed</string>
<string name="task_objective">Objective</string>
<string name="task_procedures">Procedures</string>
<string name="start">Start</string>
<string name="confirm">Confirm</string>
<string name="cancel">Cancel</string>
<string name="submit">Submit</string>
<string name="session_expired">Session expired</string>
<string name="network_error">Network error</string>
<string name="server_error">Server error</string>
<string name="retry">Retry</string>
<string name="cannot_acquire_resources">Cannot acquire necessary resources.</string>
<string name="key_mismatch">Corresponding key not found. Please check server value and try again.</string>
<string name="error">Error</string>
<string name="cannot_alter_constant">Attempting to alter constant values.</string>
<string name="no_space">Username cannot contain space bar</string>
<string name="invalid_username">Username can only contain alphabets, numbers, and @/./+/-/_</string>
<string name="input_wrong_password">Password input not match</string>
<string name="invalid_name">Invalid name. Please enter your english name.</string>
<string name="username_already_in_use">Username already in use</string>
<string name="invalid_username_or_password">Invalid username or password</string>
<string name="invalid_campaign_id">Invalid campaign ID</string>
<string name="campaign_not_activated">Campaign not activated</string>
<string name="invalid_location">Invalid location</string>
<string name="registration_success">Registration success</string>
<string name="self_recognition_instruction">Please enter the values according to your analysis</string>
<string name="check_result">Check Result</string>
<string name="body_fat_ratio">Body Fat Ratio</string>
<string name="orgin_fat">Orgin Fat</string>
<string name="muscle">Muscle</string>
<string name="metabolism_rate">Metabolism Rate</string>
<string name="body_age">Body Age</string>
<string name="body_shape">Body Shape</string>
<string name="bmi">BMI</string>
<string name="gender">Gender</string>
<string name="female">Female</string>
<string name="male">Male</string>
<string name="please_input">Please input %s</string>
<string name="please_select">Please select %s</string>
<string name="cardiorespiratory_test_start_message">Please arrive %s as soon as possible and click on the complete button once arrived. Map is available by clicking the button on top right hand side. Are you sure to start? (Cannot revert after confirmed)</string>
<string name="please_scan_qr_code">Please scan %s QR Code</string>
<string name="number_of_laps">number of laps</string>
<string name="sit_up_count">sit up count</string>
<string name="push_up_count">push up count</string>
<string name="burpee_count">burpee count</string>
<string name="value_updated">Value updated</string>
<string name="task_result">%s Result</string>
<string name="time_used">Time Used:</string>
<string name="count">Count:</string>
<string name="number_of_laps_title">Number of laps:</string>
<string name="cardiorespiratory_test">Cardiorespiratory Endurance Test</string>
<string name="sit_up_test">Sit Up Test</string>
<string name="push_up_test">Push Up Test</string>
<string name="burpee_test">Burpee Test</string>
<string name="complete">Complete</string>
<string name="break_time">Break Time</string>
<string name="value">value</string>
<string name="invalid_qr_code">Invalid QR Code</string>
<string name="give_up">Give Up</string>
<string name="image_sequence">Number %d / %d</string>
<string name="number_of_image_found">Number of Image found</string>
<string name="number_of_image">%d</string>
<string name="finish_time_left">Time left</string>
<string name="image_mismatch">Image not match</string>
<string name="confirm_start_message">Are you sure to start? (Cannot revert after confirmed)</string>
<string name="confirm_start_message_with_map">Are you sure to start? (Cannot revert after confirmed) Map is available on the top right icon</string>
<string name="confirm_complete_message">Are you sure to complete? (Cannot revert after confirmed)</string>
<string name="confirm_give_up_message">Are you sure to give up? (Cannot revert after confirmed)</string>
<string name="confirm_give_up_message_observe">Are you sure to give up? %d image left</string>
<string name="confirm_last_submission_message">Please confirm this as your last submission.</string>
<string name="next">Next</string>
<string name="time_out">Time Out</string>
<string name="finish_break">Finish Break</string>
<string name="confirm_finish_break">Are you sure to finish the break? (Cannot revert after confirmed)</string>
<string name="completed_cube_count">Completed count</string>
<string name="require_storage_permission">Require write storage permission</string>
<string name="require_storage_permission_message">Require write storage permission to continue</string>
<string name="require_location_permission">Require location permission</string>
<string name="require_location_permission_message">Require location permission to continue</string>
<string name="permission_granted">Permission granted</string>
<string name="bluetooth_required">Please turn on bluetooth to continue</string>
<string name="finish_magic_circle_time_left">Time left</string>
<string name="completed_magic_circle_numbers">Completed Item Numbers</string>
<string name="number_of_items_used">Number of items used</string>
<string name="number_of_models_built">Number of models built</string>
<string name="similarity">Similarity</string>
<string name="test_format">%s Test</string>
<string name="english_typing">English Tying</string>
<string name="chinese_typing">Chinese Tying</string>
<string name="correctly_typed_count">Correct count</string>
<string name="tap_again_to_confirm">Tap again to confirm your selection</string>
<string name="map_description">Map for %s</string>
<string name="qr_code_location_description">QR Code Location</string>
<string name="instruction_image">Instruction image %d</string>
<string name="please_enter_expression">Please enter the expression</string>
<string name="invalid_expression">Invalid expression</string>
<string name="invalid_number_set">Invalid numbers. Must use all of the numbers mentioned in the question and each should be used once only.</string>
<string name="incorrect_answer">Incorrect answer</string>
<string name="answer">Answer</string>
<string name="complete_remind">Please click complete after finishing this task</string>
<string name="calculation_remind">Please input the answer into the field, e.g.: (5-2+3)*4, then click complete</string>
<string name="total_score">Total Score:</string>
<string name="score">%s</string>
<string name="last_record">Last Record:</string>
<string name="last_access_point">last access point</string>
<string name="permission_denied">Permission denied</string>
<string name="confirm_logout_message">Are you sure to start? (Cannot revert after confirmed)</string>
</resources>