<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/select_team"
                android:letterSpacing="0.1"
                style="@style/RegularBlack25"
            />

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_gravity="center"
                android:columnCount="2"
                android:orientation="horizontal">

            </GridLayout>

            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/select_team_message"
            />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/background_capsule_accent_fill"
                android:stateListAnimator="@null"
                style="@style/RegularWhite14"
                android:text="@string/confirm"
                android:textAllCaps="false"
            />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>