<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/nav_bar_height"
    android:background="@color/colorPrimary"
    >
    <com.hkfyg.camp.widget.NavBarView
        android:id="@+id/navBarView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_bar_height"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/startButtonContainer"
        app:layout_constraintTop_toBottomOf="@+id/navBarView"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:scaleType="center"
                android:src="@drawable/subtask_power"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navBarView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="50dp"
                android:paddingEnd="50dp">

                <TextView
                    android:id="@+id/objectiveTextView"
                    style="@style/RegularWhite12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_capsule_accent_fill"
                    android:letterSpacing="@dimen/title_letter_spacing"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/task_objective" />

                <TextView
                    android:id="@+id/objectiveDetailTextView"
                    style="@style/RegularBlack16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:letterSpacing="@dimen/title_letter_spacing" />

                <TextView
                    android:id="@+id/procedureTextView"
                    style="@style/RegularWhite12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:background="@drawable/background_capsule_accent_fill"
                    android:letterSpacing="@dimen/title_letter_spacing"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/task_procedures" />

                <TextView
                    android:id="@+id/procedureDetailTextView"
                    style="@style/RegularBlack16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:letterSpacing="@dimen/title_letter_spacing" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/startButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/startButton"
            style="@style/RegularWhite14"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/confirm_button_height"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/background_capsule_accent_fill"
            android:stateListAnimator="@null"
            android:text="@string/start"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/logoutBtn"
            style="@style/RegularWhite14"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/confirm_button_height"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_capsule_dark_green"
            android:stateListAnimator="@null"
            android:text="@string/logout"
            android:textAllCaps="false" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>